[package]
name = "cloudflare"
version = "0.1.0"
authors = ["Areg Harutyunyan <areg@cloudflare.com>"]
edition = "2018"
description = "Rust library for the Cloudflare v4 API"
keywords = ["cloudflare", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
license = "BSD-3-Clause"

[lib]
name = "cloudflare"
path = "src/lib.rs"

[[bin]]
name = "cloudflare-rust-examples"
path = "example/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
maplit = "1.0"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.4"
serde_yaml = "0.8"
slog = "2.4"
slog-term = "2.4"
sloggers = "0.3"
url = "1.7"
