[package]
name = "cloudflare"
version = "0.4.0"
authors = ["Areg Harutyunyan <areg@cloudflare.com>"]
edition = "2018"
description = "Rust library for the Cloudflare v4 API"
keywords = ["cloudflare", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
license = "BSD-3-Clause"

[lib]
name = "cloudflare"
path = "src/lib.rs"

[[bin]]
name = "cloudflare-rust-examples"
path = "example/main.rs"

[[bin]]
name = "e2e-tests"
path = "e2e_tests/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
http = "0.1.18"
maplit = "1.0"
reqwest = { version = "0.10.0-alpha.1", features = ["json", "blocking"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.4"
serde_with = "1.3.1"
slog = "2.4"
slog-term = "2.4"
sloggers = "0.3"
url = "2.1"
percent-encoding = "1.0.1"
failure = "0.1.5"
