[package]
name = "cloudflare-examples"
version = "0.5.0"
edition = "2018"
description = "Examples of how to use the Cloudflare Rust API client"

[[bin]]
name = "cloudflare-examples"
path = "src/main.rs"

[dependencies]
clap = "2.33"
cloudflare = {path = "../cloudflare"}
maplit = "1.0"
serde = { version = "1.0" }
serde_json = "1.0"
