[package]
name = "cloudflare-reqwest"
version = "0.8.2"
authors = ["Areg Harutyunyan <areg@cloudflare.com>"]
edition = "2018"
description = "Rust library for converting Cloudflare v4 API requests into reqwest requests"
keywords = ["cloudflare", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
license = "BSD-3-Clause"

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = "0.1"
cloudflare = { version = "0.8", path = "../cloudflare", features = ["async-trait"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
structopt = "0.3"
anyhow = "1.0"
tokio = { version = "1.7", features = ["full"] }