[package]
name = "cloudflare"
version = "0.11.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Jeff Hiner <jhiner@cloudflare.com>"]
edition = "2018"
description = "Rust library for the Cloudflare v4 API"
keywords = ["cloudflare", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
license = "BSD-3-Clause"

[features]
default = ["default-tls"]
blocking = ["reqwest/blocking"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
spec = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
    "wasmbind",
] }
http = "0.2"
mockito = { version = "0.31", optional = true }
percent-encoding = "2.1.0"
reqwest = { version = "0.11.4", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0", features = ["base64"] }
serde_urlencoded = "0.7.1"
thiserror = "1"
url = "2.2"
uuid = { version = "1.0", features = ["serde"] }
