[package]
name = "cloudflare"
version = "0.14.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Jeff Hiner <jhiner@cloudflare.com>", "Kenneth Eversole <keversole@cloudflare.com>"]
repository = "https://github.com/cloudflare/cloudflare-rs"
edition = "2021"
description = "Rust library for the Cloudflare v4 API"
keywords = ["cloudflare", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
license = "BSD-3-Clause"

[features]
default = ["default-tls"]
blocking = ["reqwest/blocking"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
ndarray = ["dep:ndarray"]
spec = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
    "wasmbind",
] }
http = "1"
mockito = { version = "1.6.1", optional = true }
ndarray = { version = "0.16", optional = true, features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["base64"] }
serde_urlencoded = "0.7.1"
thiserror = "2"
url = "2.2"
urlencoding = "2.1.3"
uuid = { version = "1.0", features = ["serde"] }

[dev-dependencies]
mockito = { version = "1.6.1" }
tokio = { version = "1.0", features = ["macros"] }
regex = "1.11.1"
